--- a/static/view.html
+++ b/static/view.html
@@ -54,16 +54,19 @@
                                         </div>
                                         <div class="cont">
                                          ${content}
-                                        </div>`                                                                                                  
+                                        </div>`                                                                                                                                      
                     $('#board_view').append(temp_html)
                     }
                 
             });
-        } 
+        }         
+
+        function move(){
+            window.location.href = `edit/?num=${num}`
+        }
     </script>
 </head>
-<body>
-   
+<body>   
     <div class="board_wrap">
         <div class="board_title">
             <strong onclick="window.location.href = '/'">항해블로그</strong>
@@ -101,7 +104,7 @@
             </div>
             <div class="bt_wrap">
                 <a href="/" class="on">목록</a>
-                <a href="edit.html">수정</a>                
+                <a href='#' onclick="move()">수정</a>          
             </div>
         </div>
     </div>
