글쓰기 빈칸으로 입력하면 에러메시지 뜨게 수정

--- a/static/write.html
+++ b/static/write.html
@@ -30,7 +30,8 @@
                      window.location.href = '/'
                  },
                  error:function(request,status,error){
-                        alert("code = "+ request.status + " message = " + request.responseText + " error = " + error); // 실패 시 처리
+                        alert(request.responseText)
+                        // alert("code = "+ request.status + " message = " + request.responseText + " error = " + error); // 실패 시 처리
                     }           
             });
          }
