--- a/static/board.html
+++ b/static/board.html
@@ -7,9 +7,14 @@
     <title>항해블로그</title>
     <link rel="stylesheet" href="/style.css">
 
-    <script>
+    <script>       
         $(document).ready(function () {  
-             show_board();
+            if(localStorage.getItem("token")){                                 
+                $('#btn_login').hide()  
+            }else{
+                $('#btn_logout').hide()              
+            }           
+            show_board();
          });
  
          function show_board() {
@@ -37,13 +42,22 @@
                  }
              });
          } 
+
+        function signOut() {
+            localStorage.clear();
+            window.location.href = "/";
+            }
      </script>
 </head>
 <body>
     
     <div class="board_wrap">
         <div class="board_title">
-            <strong onclick="window.location.href = '/'">항해블로그</strong>          
+            <strong onclick="window.location.href = '/'">항해블로그   
+                <a href="/login"><button id =btn_login >로그인</button> </a>
+                <button id =btn_logout onclick="signOut()" >로그아웃</button>   
+                <a href="/sign"><button id =btn_sign >회원가입</button> </a>              
+            </strong>          
         </div>
         <div class="board_list_wrap">
             <div class="board_list">
@@ -57,7 +71,7 @@
                 </div>
             </div>      
             <div class="bt_wrap">
-                <a href="/write" class="on">글쓰기</a>               
+                <a href="/write" class="on" id="btn_post">글쓰기  </a>               
             </div>
         </div>
     </div>
