--- a/static/edit.html
+++ b/static/edit.html
@@ -8,18 +8,22 @@
     <link rel="stylesheet" href="/style.css">
 
     <script>
-        const quaryString = window.location.search;
+         const quaryString = window.location.search;
          console.log(quaryString)
          const urlParams = new URLSearchParams(quaryString);
          console.log(urlParams)
          const num = urlParams.get("num");
          console.log(num)
+      
 
         $(document).ready(function () {  
             edit_board();
         });
         function edit_board() {
-
+            if(!localStorage.getItem("token")){                  
+            alert("로그인이 필요합니다.")
+            window.location.href='/login'
+         }     
             $.ajax({
                 type: "GET",
                 url: `/api/board/${num}`,
@@ -68,6 +72,9 @@
              $.ajax({
                  type: "PUT",
                  url: `/api/board/${num}`,
+                 headers: {
+                    authorization: `Bearer ${localStorage.getItem("token")}`,
+                },
                  contentType: "application/json",
                  data: JSON.stringify({
                     title : title_give,
@@ -93,6 +100,9 @@
              $.ajax({
                  type: "DELETE",
                  url: `/api/board/${num}`,
+                 headers: {
+                    authorization: `Bearer ${localStorage.getItem("token")}`,
+                },
                  contentType: "application/json",
                  data: JSON.stringify({                
                     password: password_give,                 
@@ -119,7 +129,7 @@
         </div>
         <div class="board_write_wrap">
             <div id= "board_edit", class="board_write">                
-            </div>
+            </div>            
             <div class="bt_wrap">
                 <button onclick="update_board()" style="width: 100px; height: 36px; ">수정</button> 
                 <button onclick="delete_board()" style="width: 100px; height: 36px; ">삭제</button> 
