테스트코드

--- a/static/view.html
+++ b/static/view.html
@@ -242,6 +242,7 @@
 		}
         
         function update_comment_show(n){
+        console.log(n)
          $(`#comment${n}`).hide()  
          $(`#btn_cmt_update${n}`).hide()  
          $(`#btn_cmt_delete${n}`).hide() 
